eks/weather-ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:616293267995:certificate/ea307bc4-7d11-4b67-8a01-a3b84dddfb25
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: hieult-group
spec:
  ingressClassName: alb
  rules:
    - host: hieult.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-app
                port:
                  number: 80
