eks/weatherapp-policy-aws.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-policy
  namespace: weather-app
spec:
  endpointSelector:
    matchLabels:
      app: postgre-database
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: weatherapp
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  egress:
  - toEntities:
    - all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: weatherapp-policy
  namespace: weather-app
spec: 
  endpointSelector:
    matchLabels:
      app: weatherapp
  ingress:
  # - fromEntities:
  #   - world
  - fromCIDR:
    - 172.0.0.51/32
    - 172.0.0.25/32
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
  egress:
  - toEntities:
    - all
